// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue/UIFileUploader renders correctly - basic 1`] = `
"<div class=\\"ui-file-uploader ui-file-uploader--large\\">
  <!---->
  <!----> <input id=\\"z8a8d7a5zad4\\" type=\\"file\\" name=\\"test\\" class=\\"ui-file-uploader__field\\">
  <!----> <span class=\\"ui-file-uploader__files-list\\">

  </span>
  <!---->
</div>"
`;

exports[`vue/UIFileUploader renders correctly - multiple 1`] = `
"<div class=\\"ui-file-uploader\\">
  <!---->
  <!----> <input id=\\"z8a8d7a5zad4\\" type=\\"file\\" name=\\"test\\" multiple=\\"multiple\\" class=\\"ui-file-uploader__field\\">
  <!----> <span class=\\"ui-file-uploader__files-list\\">

  </span>
  <!---->
</div>"
`;

exports[`vue/UIFileUploader renders correctly - with helper 1`] = `
"<div class=\\"ui-file-uploader\\">
  <!---->
  <!----> <input id=\\"z8a8d7a5zad4\\" type=\\"file\\" name=\\"test\\" class=\\"ui-file-uploader__field\\">
  <!----> <span class=\\"ui-file-uploader__files-list\\">

  </span>
  <p class=\\"ui-file-uploader__helper\\">
    Text
  </p>
</div>"
`;

exports[`vue/UIFileUploader renders correctly - with id 1`] = `
"<div id=\\"test\\" class=\\"ui-file-uploader\\">
  <!---->
  <!----> <input id=\\"z8a8d7a5zad4\\" type=\\"file\\" name=\\"test\\" class=\\"ui-file-uploader__field\\">
  <!----> <span class=\\"ui-file-uploader__files-list\\">

  </span>
  <!---->
</div>"
`;

exports[`vue/UIFileUploader renders correctly - with label 1`] = `
"<div class=\\"ui-file-uploader\\"><label for=\\"z8a8d7a5zad4\\" class=\\"ui-file-uploader__label\\"><strong>Text</strong></label>
  <!----> <input id=\\"z8a8d7a5zad4\\" type=\\"file\\" name=\\"test\\" class=\\"ui-file-uploader__field\\">
  <!----> <span class=\\"ui-file-uploader__files-list\\">

  </span>
  <!---->
</div>"
`;

exports[`vue/UIFileUploader renders correctly - with left icon 1`] = `
"<div class=\\"ui-file-uploader\\">
  <!----> <i class=\\"ui-button__icon\\">star</i> <input id=\\"z8a8d7a5zad4\\" type=\\"file\\" name=\\"test\\" class=\\"ui-file-uploader__field\\">
  <!----> <span class=\\"ui-file-uploader__files-list\\">

  </span>
  <!---->
</div>"
`;

exports[`vue/UIFileUploader renders correctly - with listeners 1`] = `
"<div class=\\"ui-file-uploader\\" value=\\"test\\">
  <!----> <i class=\\"ui-button__icon\\">star</i> <input id=\\"z8a8d7a5zad4\\" type=\\"file\\" name=\\"test\\" class=\\"ui-file-uploader__field\\">
  <!----> <span class=\\"ui-file-uploader__files-list\\">
    /path/to/file1.png
  </span>
  <!---->
</div>"
`;

exports[`vue/UIFileUploader renders correctly - with placeholder 1`] = `
"<div class=\\"ui-file-uploader\\">
  <!---->
  <!----> <input id=\\"z8a8d7a5zad4\\" type=\\"file\\" name=\\"test\\" class=\\"ui-file-uploader__field\\">
  <!----> <span class=\\"ui-file-uploader__files-list\\">
    text
  </span>
  <!---->
</div>"
`;

exports[`vue/UIFileUploader renders correctly - with right icon 1`] = `
"<div class=\\"ui-file-uploader\\">
  <!---->
  <!----> <input id=\\"z8a8d7a5zad4\\" type=\\"file\\" name=\\"test\\" class=\\"ui-file-uploader__field\\"> <i class=\\"ui-button__icon\\">star</i> <span class=\\"ui-file-uploader__files-list\\">

  </span>
  <!---->
</div>"
`;
